# nag763

./: .gitignore  404.html  Cargo.toml  README.md  build.rs  i18next-resources.json  index.html  main.css  main.tf  middleware.js  next.config.mjs  package.json  tailwind.config.js  variables.tf
.github/workflows/: build_and_deploy.yml  build_deploy.yml  build_deploy_gcp.yml  build_deploy_s3.yml  check_on_pr.yml  deploy-front.yml  deploy-lambda.yml
agent/: .gitignore  Dockerfile  agent.py  app.py  evaluate_agent.py  evaluation_cases.json  lambda_function.py  main.py  pyproject.toml
agent/assistant/: agent.py  certifications.py  interest_opportunities.py  introduce.py  links_and_contact.py  projects.py  scholarship.py  skills.py  work_experience.py
agent/lambda_packages/httpx-0.28.1.dist-info/: RECORD
agent/lambda_packages/jmespath-1.0.1.dist-info/: RECORD
agent/lambda_packages/jsonschema-4.24.0.dist-info/: RECORD
agent/lambda_packages/mcp-1.11.0.dist-info/: RECORD
agent/lambda_packages/opentelemetry_instrumentation-0.56b0.dist-info/: RECORD
agent/lambda_packages/opentelemetry_instrumentation_threading-0.56b0.dist-info/: RECORD
agent/lambda_packages/python_dotenv-1.1.1.dist-info/: RECORD
agent/lambda_packages/rpds_py-0.26.0.dist-info/: RECORD
agent/lambda_packages/strands_agents-0.3.0.dist-info/: RECORD
agent/lambda_packages/uvicorn-0.35.0.dist-info/: RECORD
agent/lambda_packages/watchdog-6.0.0.dist-info/: RECORD
agent/lambda_packages/wrapt-1.17.2.dist-info/: RECORD
agent/tools/: __init__.py  certifications.py  interest_opportunities.py  introduce.py  links_and_contact.py  projects.py  scholarship.py  skills.py  work_experience.py
analyze/: nodejs.html
app/: globals.css  layout.js  page.js
app/[lng]/: layout.js  page.js
app/api/: sendMail.js
app/components/: footer.js  header.js
app/i18n/: index.js  (+1 more)
front/: .gitignore  astro.config.mjs  package-lock.json  package.json
lambda/: Cargo.toml
locales/: de.yml  en.yaml  fr.yaml
public/: index.css  robots.txt  sitemap.xml
src/: app.rs  index.html  index.js  main.rs  robots.txt
terraform/: cloudfront.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
(+71 files in other folders)
