[package]
name = "nag763"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" 

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
leptos-use = "0.10.10"
leptos_i18n = { version = "0.3.3", default-features = false, features = ["csr", "yaml_files", "cookie"] }
leptos_router = { version = "0.6.11", features = ["csr"] }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr", "de"]
