[package]
name = "nag763"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" 

[dependencies]
console_error_panic_hook = "0.1.7"
cookie = "0.18.1"
gloo-console = "0.3.0"
leptos = { version = "0.6.14", features = ["csr"] }
leptos-use = "0.10.10"
leptos_i18n = { version = "0.3.3", default-features = false, features = ["csr", "yaml_files", "cookie"] }
leptos_meta = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr", "de"]
