[package]
name = "mycv"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" 

[dependencies]
codee = "0.2.0"
cookie = "0.18.1"
leptos = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.5"
leptos_i18n = { version = "0.4.1", default-features = false, features = ["csr", "yaml_files", "cookie"] }
leptos_meta = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr", "de"]
